Corrected overflow property.

--- a/src/app/synth-module-container/synth-module-container.component.scss
+++ b/src/app/synth-module-container/synth-module-container.component.scss
@@ -47,7 +47,7 @@
   // border: solid 5px red;
   height: 90%;
   overflow-x: auto;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 
